--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Compras</title>
     <style>
-        /* Estilos opcionales para mejorar la presentación */
+        
         body {
             font-family: 'Arial', sans-serif;
             margin: 20px;
@@ -52,6 +52,6 @@
         </div>
     </div>
 
-    <script src="preentrega3.js"></script>
+    <script src="./preentrega3.js"></script>
 </body>
 </html>
